--- a/source/index.html
+++ b/source/index.html
@@ -9,27 +9,27 @@
       <a class="page-header__logo">
         <img src="https://via.placeholder.com/150x150" alt="Мобильное приложение Пинк">
       </a>
-      <nav class="main-nav">
+      <nav class="main-nav page-header__main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
             <li class="main-nav__item main-nav__item--active">
-              <a>
+              <a class="main-nav__link">
                 Главная
               </a>
             </li>
             <li class="main-nav__item">
-              <a href="#">
+              <a class="main-nav__link" href="#">
                 Фотографии
               </a>
             </li>
             <li class="main-nav__item">
-              <a href="#">
+              <a class="main-nav__link" href="#">
                 Конкурс
               </a>
             </li>
             <li class="main-nav__item">
-              <a href="#">
+              <a class="main-nav__link" href="#">
                 HTML Academy
               </a>
             </li>
@@ -44,11 +44,11 @@
 
       <section class="intro">
         <div class="intro__wrapper">
-          <header class="intro__header">
+          <div class="intro__header">
             <h2 class="visually-hidden">Скачать мобильное приложение Пинк</h2>
             <p class="intro__slogan">Взгляните на жизнь иначе!</p>
             <img class="intro__image" src="https://via.placeholder.com/150x150" alt="Телефон в руке с видом на город">
-          </header>
+          </div>
           <div class="intro__app-links">
             <a class="intro__download-button" href="https://www.apple.com/ru/app-store/">Скачать приложение</a>
             <ul class="intro__list">
@@ -105,9 +105,9 @@
       </section>
 
       <section class="reviews">
-        <div class="reviews__wrapper slider">
+        <div class="reviews__wrapper">
           <h2 class="visually-hidden">Отзывы пользователей приложения Пинк</h2>
-          <div class="reviews__list slider__list">
+          <div class="reviews__list slider">
             <blockquote class="reviews__item slider__item">
               <div class="reviews__author-info">
                 <cite class="reviews__author-name">Николай Петров</cite>
@@ -129,56 +129,56 @@
         <div class="price__wrapper">
           <h2>Таблица с тарифами</h2>
           <table class="price-table">
-            <tr class="price-table__row">
-              <th class="price-table__header-cell price-table__header-cell--empty">
+            <tr>
+              <th>
                 <!--empty cell-->
               </th>
-              <th class="price-table__header-cell">
+              <th>
                 <span class="price-table__name">База</span>
                 <span class="price-table__price">1,99 USD</span>
               </th>
-              <th class="price-table__header-cell price-table__header-cell--hit">
+              <th>
                 <span class="price-table__name">Стандарт</span>
                 <span class="price-table__price">3,99 USD</span>
               </th>
-              <th class="price-table__header-cell">
+              <th>
                 <span class="price-table__name">Анлим</span>
                 <span class="price-table__price">9,99 USD</span>
               </th>
             </tr>
-            <tr class="price-table__row">
-              <td class="price-table__data">Розовый фильтр</td>
-              <td class="price-table__data">
+            <tr>
+              <td>Розовый фильтр</td>
+              <td>
                 <span class="visually-hidden">Возможность доступна</span>
               </td>
-              <td class="price-table__data">
+              <td>
                 <span class="visually-hidden">Возможность доступна</span>
               </td>
-              <td class="price-table__data">
-                <span class="visually-hidden">Возможность доступна</span>
-              </td>
-            </tr>
-            <tr class="price-table__row">
-              <td class="price-table__data">Смайлики</td>
-              <td class="price-table__data">
-                <span class="visually-hidden">Возможность не доступна</span>
-              </td>
-              <td class="price-table__data">
-                <span class="visually-hidden">Возможность доступна</span>
-              </td>
-              <td class="price-table__data">
+              <td>
                 <span class="visually-hidden">Возможность доступна</span>
               </td>
             </tr>
-            <tr class="price-table__row">
-              <td class="price-table__data">Комментарии</td>
-              <td class="price-table__data">
+            <tr>
+              <td>Смайлики</td>
+              <td>
                 <span class="visually-hidden">Возможность не доступна</span>
               </td>
-              <td class="price-table__data">
+              <td>
+                <span class="visually-hidden">Возможность доступна</span>
+              </td>
+              <td>
+                <span class="visually-hidden">Возможность доступна</span>
+              </td>
+            </tr>
+            <tr>
+              <td>Комментарии</td>
+              <td>
                 <span class="visually-hidden">Возможность не доступна</span>
               </td>
-              <td class="price-table__data">
+              <td>
+                <span class="visually-hidden">Возможность не доступна</span>
+              </td>
+              <td>
                 <span class="visually-hidden">Возможность доступна</span>
               </td>
             </tr>
