--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
-    <link rel="stylesheet" href="css/style.css"></link>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="page-header">
@@ -27,7 +27,7 @@
       <nav class="main-nav page-header__main-nav">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
-            <li class="main-nav__item main-nav__item">
+            <li class="main-nav__item main-nav__item--current">
               <a class="main-nav__link">
                 Главная
               </a>
@@ -38,7 +38,7 @@
               </a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link" href="#">
+              <a class="main-nav__link" href="form.html">
                 Конкурс
               </a>
             </li>
