--- a/source/catalog.html
+++ b/source/catalog.html
@@ -27,13 +27,13 @@
       <nav class="main-nav page-header__main-nav">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
-            <li class="main-nav__item main-nav__item--current">
+            <li class="main-nav__item">
               <a class="main-nav__link">
                 Главная
               </a>
             </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link" href="catalog.html">
+            <li class="main-nav__item main-nav__item--current">
+              <a class="main-nav__link" href="#">
                 Фотографии
               </a>
             </li>
@@ -53,175 +53,171 @@
     </header>
 
     <main class="page-main">
+      <div class="page-main__intro">
+        <h1 class="page-main__title">Фотографии пользователей</h1>
+      </div>
 
-      <h1 class="visually-hidden">Мобильное приложение Пинк - взгляните на жизнь иначе!</h1>
-
-      <section class="intro">
-        <div class="intro__wrapper">
-          <div class="intro__header">
-            <h2 class="visually-hidden">Скачать мобильное приложение Пинк</h2>
-            <p class="intro__slogan">Взгляните на жизнь иначе!</p>
-            <img class="intro__image" src="img/mobile-phone.png" width="320" height="286" alt="Телефон в руке с видом на город">
-          </div>
-          <div class="intro__app-links">
-            <a class="intro__download-button" href="https://www.apple.com/ru/app-store/">Скачать приложение</a>
-            <ul class="intro__list">
-              <li class="intro__item intro__item--apple">
-                <a class="intro__link" href="https://www.apple.com/ru/app-store/"><span class="visually-hidden">Логотип Apple</span></a>
-              </li>
-              <li class="intro__item intro__item--android">
-                <a class="intro__link" href="https://play.google.com/store/apps?hl=ru&gl=US"><span class="visually-hidden">Логотип Android</span></a>
-              </li>
-              <li class="intro__item intro__item--microsoft">
-                <a class="intro__link" href="https://www.microsoft.com/ru-tm/store/b/home"><span class="visually-hidden">Логотип Microsoft</span></a>
-              </li>
-            </ul>
-            <p class="intro__discription-text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-          </div>
+      <section class="photos">
+        <h2 class="visually-hidden">Подборка последних публикаций Пинк</h2>
+        <div class="photos__intro-wrapper">
+          <p class="photos__intro">Взгляните на фотографии, которые выкладывают пользователи!</p>
+          <p class="photos__intro">Видите, как не хватает ваших?</p>
         </div>
-      </section>
-
-      <section class="features">
-        <div class="features__wrapper">
-          <h2 class="visually-hidden">Особенности приложения Пинк</h2>
-          <p class="features__slogan">Устали от серости мегаполиса? Нам есть, что вам предложить!</p>
-          <ul class="features__list">
-            <li class="features__item">
-              <img class="features__image" src="https://via.placeholder.com/150x150" alt="Промо скриншот из приложения">
-              <h3 class="features__title">Поднимает настроение</h3>
-              <p class="features__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-            </li>
-            <li class="features__item">
-              <img class="features__image" src="https://via.placeholder.com/150x150" alt="Промо скриншот из приложения">
-              <h3 class="features__title">Меняет мир вокруг</h3>
-              <p class="features__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-            </li>
-            <li class="features__item">
-              <img class="features__image" src="https://via.placeholder.com/150x150" alt="Промо скриншот из приложения">
-              <h3 class="features__title">Заводит новых друзей</h3>
-              <p class="features__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
-            </li>
-          </ul>
-          <div class="features__image-wrapper">
-            <img class="features__image" src="https://via.placeholder.com/150x150" alt="Промо скриншот из приложения">
-          </div>
-        </div>
-      </section>
-
-      <section class="article">
-        <div class="article__wrapper">
-          <h2 class="visually-hidden">Статья об исследовании приложения Пинк</h2>
-          <img class="article__image" src="https://via.placeholder.com/150x150" alt="Секундомер с цифрой 24">
-          <h3 class="article__title">Эффект на 24 часа!</h3>
-          <p class="article__text">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
-          <a class="article__link" href="#">Узнать больше об исследовании</a>
-        </div>
-      </section>
-
-      <section class="reviews">
-        <div class="reviews__wrapper">
-          <h2 class="visually-hidden">Отзывы пользователей приложения Пинк</h2>
-          <div class="reviews__list slider">
-            <blockquote class="reviews__item slider__item">
-              <div class="reviews__author-info">
-                <cite class="reviews__author-name">Николай Петров</cite>
-                <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+        <ul class="photos__list">
+          <li class="photos__item photos__item--best">
+            <h3 class="visually-hidden">Панорама дня</h3>
+            <img class="photos__image photos__image--best" src="https://via.placeholder.com/150x150" alt="Панорама дня, вид сверху на лес">
+            <div class="photos__description">
+              <span class="photos__author-name">Анна <span class="photos__time">(5 минут назад)</span></span>
+              <blockquote class="photos__text">
+                Прыгать или нет? Напишите в
+                комментарии свой совет и
+                смотрите прямую трансляцию в
+                перископе, задавайте свои вопросы!
+              </blockquote>
+              <div class="photos__like-group">
+                <button class="photos__like-button">
+                  <span class="visually-hidden">Поставить лайк</span>
+                </button>
+                <span class="photos__like-counter">Нравится: 215</span>
               </div>
-            </blockquote>
-            <button class="reviews__prev" type="button">Предыдущий отзыв</button>
-            <button class="reviews__next" type="button">Следующий отзыв</button>
-          </div>
-          <p class="reviews__toggles slider__toggles">
-            <button class="slider__toggle slider__toggle--current" type="button">1</button>
-            <button class="slider__toggle" type="button">2</button>
-            <button class="slider__toggle" type="button">3</button>
-          </p>
-        </div>
+            </div>
+          </li>
+          <li class="photos__item">
+            <img class="photos__image" src="https://via.placeholder.com/150x150" alt="Камера на штативе">
+            <div class="photos__description">
+              <span class="photos__author-name">Левон<span class="photos__time">(5 часов
+                  назад)</span></span>
+              <blockquote class="photos__text">
+                Вчера он на луну летал, сегодня в руки к нам попал.
+              </blockquote>
+              <div class="photos__like-group">
+                <button class="photos__like-button">
+                  <span class="visually-hidden">Поставить лайк</span>
+                </button>
+                <span class="photos__like-counter">Нравится: 356</span>
+              </div>
+            </div>
+          </li>
+          <li class="photos__item">
+            <img class="photos__image" src="https://via.placeholder.com/150x150" alt="Барабанная установка">
+            <div class="photos__description">
+              <span class="photos__author-name">Антон<span class="photos__time">(12 часов
+                  назад)</span></span>
+              <blockquote class="photos__text">
+                Соседи будут рады!
+              </blockquote>
+              <div class="photos__like-group">
+                <button class="photos__like-button">
+                  <span class="visually-hidden">Поставить лайк</span>
+                </button>
+                <span class="photos__like-counter">Нравится: 666</span>
+              </div>
+            </div>
+          </li>
+          <li class="photos__item">
+            <img class="photos__image" src="https://via.placeholder.com/150x150" alt="Дверь с решеткой">
+            <div class="photos__description">
+              <span class="photos__author-name">Борис<span class="photos__time">(20
+                  часов назад)</span></span>
+              <blockquote class="photos__text">
+                Здесь могла быть ваша цитата о высоком и вечном.
+              </blockquote>
+              <div class="photos__like-group">
+                <button class="photos__like-button">
+                  <span class="visually-hidden">Поставить лайк</span>
+                </button>
+                <span class="photos__like-counter">Нравится: 215</span>
+              </div>
+            </div>
+          </li>
+          <li class="photos__item">
+            <img class="photos__image" src="https://via.placeholder.com/150x150" alt="Ярмарка в шатре">
+            <div class="photos__description">
+              <span class="photos__author-name">Сергей<span class="photos__time">(25 часов назад)</span></span>
+              <blockquote class="photos__text">
+                Самая кубанская в мире!
+              </blockquote>
+              <div class="photos__like-group">
+                <button class="photos__like-button">
+                  <span class="visually-hidden">Поставить лайк</span>
+                </button>
+                <span class="photos__like-counter">Нравится: 4</span>
+              </div>
+            </div>
+          </li>
+          <li class="photos__item">
+            <img class="photos__image" src="https://via.placeholder.com/150x150" alt="Вид на горную местноость с обрыва">
+            <div class="photos__description">
+              <span class="photos__author-name">Максим<span class="photos__time">(40 часов назад)</span></span>
+              <blockquote class="photos__text">
+                Где снег-то?
+              </blockquote>
+              <div class="photos__like-group">
+                <button class="photos__like-button">
+                  <span class="visually-hidden">Поставить лайк</span>
+                </button>
+                <span class="photos__like-counter">Нравится: 150</span>
+              </div>
+            </div>
+          </li>
+          <li class="photos__item">
+            <img class="photos__image" src="https://via.placeholder.com/150x150" alt="Вид на крыло самолёта и рассвет">
+            <div class="photos__description">
+              <span class="photos__author-name">Надежда<span class="photos__time">(45 часов назад)</span></span>
+              <blockquote class="photos__text">
+                Всем GM и взаимные лайки!
+              </blockquote>
+              <div class="photos__like-group">
+                <button class="photos__like-button">
+                  <span class="visually-hidden">Поставить лайк</span>
+                </button>
+                <span class="photos__like-counter">Нравится: 2560</span>
+              </div>
+            </div>
+          </li>
+        </ul>
       </section>
 
-      <section class="price">
-        <div class="price__wrapper">
-          <h2>Таблица с тарифами</h2>
-          <table class="price-table">
-            <tr>
-              <th>
-                <!--empty cell-->
-              </th>
-              <th>
-                <span class="price-table__name">База</span>
-                <span class="price-table__price">1,99 USD</span>
-              </th>
-              <th>
-                <span class="price-table__name">Стандарт</span>
-                <span class="price-table__price">3,99 USD</span>
-              </th>
-              <th>
-                <span class="price-table__name">Анлим</span>
-                <span class="price-table__price">9,99 USD</span>
-              </th>
-            </tr>
-            <tr>
-              <td>Розовый фильтр</td>
-              <td>
-                <span class="visually-hidden">Возможность доступна</span>
-              </td>
-              <td>
-                <span class="visually-hidden">Возможность доступна</span>
-              </td>
-              <td>
-                <span class="visually-hidden">Возможность доступна</span>
-              </td>
-            </tr>
-            <tr>
-              <td>Смайлики</td>
-              <td>
-                <span class="visually-hidden">Возможность не доступна</span>
-              </td>
-              <td>
-                <span class="visually-hidden">Возможность доступна</span>
-              </td>
-              <td>
-                <span class="visually-hidden">Возможность доступна</span>
-              </td>
-            </tr>
-            <tr>
-              <td>Комментарии</td>
-              <td>
-                <span class="visually-hidden">Возможность не доступна</span>
-              </td>
-              <td>
-                <span class="visually-hidden">Возможность не доступна</span>
-              </td>
-              <td>
-                <span class="visually-hidden">Возможность доступна</span>
-              </td>
-            </tr>
-          </table>
+      <section class="editor">
+        <h2 class="visually-hidden">Редактор фото</h2>
+        <div class="editor__intro-wrapper">
+          <p class="editor__intro">Затмите их всех!</p>
+          <p class="editor__intro">Выкладывайте все, что накопилось в телефоне!</p>
         </div>
-      </section>
-
-      <section class="contacts">
-        <div class="contacts__wrapper">
-          <h2 class="visually-hidden">Контакты разработчиков</h2>
-          <p class="contacts__slogan">Остались вопросы? Свяжитесь с нами!</p>
-          <ul class="contacts__list">
-            <li class="contacts__item">
-              <p class="contacts__title">Звоните:</p>
-              <a class="contacts__link" href="tel:+78125556666">+7 (812) 555-66-66</a>
-            </li>
-            <li class="contacts__item">
-              <p class="contacts__title">Пишите:</p>
-              <a class="contacts__link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-            </li>
-            <li class="contacts__item">
-              <p class="contacts__title">Приезжайте в гости:</p>
-              <address class="contacts__link">ул. Большая Конюшенная, 19/8</address>
-            </li>
-          </ul>
-          <div class="contacts__map">
-            <iframe src="#"></iframe>
+        <div class="editor__wrapper--bg">
+          <div class="editor__wrapper">
+            <img class="editor__image" src="https://via.placeholder.com/150x150" alt="Зимняя просёлочная дорога">
+            <div class="editor__settings">
+              <button class="editor__set editor__set--crop">
+                <span class="visually-hidden">Обрезка</span>
+              </button>
+              <button class="editor__set editor__set--fill">
+                <span class="visually-hidden">Заливка</span>
+              </button>
+              <button class="editor__set editor__set--contrast">
+                <span class="visually-hidden">Контраст</span>
+              </button>
+            </div>
+            <div class="editor__range-group">
+              <div class="editor__range-control editor__range-control--crop editor__range-control--active range-control">
+                <input type="range" id="crop" name="crop">
+                <label class="visually-hidden" for="cut">Регулировка обрезки</label>
+              </div>
+              <div class="editor__range-control editor__range-control--fill range-control">
+                <input type="range" id="fill" name="fill">
+                <label class="visually-hidden" for="fill">Регулировка заливки</label>
+              </div>
+              <div class="editor__range-control editor__range-control--contrast range-control">
+                <input type="range" id="contrast" name="contrast">
+                <label class="visually-hidden" for="contrast">Регулировка контраста</label>
+              </div>
+              <div class="editor__button-group">
+                <button class="editor__button button button--post">Запостить</button>
+                <button class="editor__button button button--cancel">Отмена</button>
+              </div>
+            </div>
           </div>
-        </div>
       </section>
     </main>
 
