--- a/source/catalog.html
+++ b/source/catalog.html
@@ -53,9 +53,13 @@
     </header>
 
     <main class="page-main">
-      <div class="page-main__intro">
-        <h1 class="page-main__title">Фотографии пользователей</h1>
-      </div>
+      <section class="intro">
+        <div class="intro__wrapper">
+          <div class="intro__header">
+            <h1 class="intro__slogan">Фотографии пользователей</h1>
+          </div>
+        </div>
+      </section>
 
       <section class="photos">
         <h2 class="visually-hidden">Подборка последних публикаций Пинк</h2>
