Стилизация страницы с формой

--- a/source/form.html
+++ b/source/form.html
@@ -168,7 +168,7 @@
             </ul>
           </fieldset>
           <div class="form__group form__group--feedback">
-            <h3 class="form__group-title">Опишите свои эмоции</h3>
+            <h3 class="form__group-title form__group-title--textarea">Опишите свои эмоции</h3>
             <div class="form__item text-field">
               <label class="visually-hidden" for="feedback">Отзыв участника</label>
               <textarea class="text-field__input" name="feedback" id="feedback" rows="8" cols="20" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
@@ -177,7 +177,7 @@
           <div class="form__submit-group">
             <button class="form__submit-button form-button" type="submit">Отправить форму</button>
             <small class="form__legend">
-              *-обязательные поля
+              <span class="form__required-sign">*</span>-обязательные поля
             </small>
           </div>
         </form>
